[gd_scene load_steps=7 format=3 uid="uid://dbid026m80sb"]

[ext_resource type="Script" uid="uid://ch1ft8by16a4u" path="res://player_controller/player_controller.gd" id="1_f0yg5"]
[ext_resource type="PackedScene" uid="uid://dj028bfrwe8p3" path="res://player_gun/gun.tscn" id="2_5s87f"]
[ext_resource type="FontFile" uid="uid://c8rynjlvhun2s" path="res://assets/Xolonium-Regular.ttf" id="3_u00sh"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iof21"]
albedo_color = Color(0.91806, 0.575202, 0.222449, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ucva2"]
radius = 0.4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_iof21"]
radius = 0.446797
height = 1.8

[node name="PlayerController" type="CharacterBody3D" groups=["damageable", "player"]]
collision_layer = 16
collision_mask = 5
script = ExtResource("1_f0yg5")
GUN = ExtResource("2_5s87f")

[node name="Head" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
material_override = SubResource("StandardMaterial3D_iof21")
cast_shadow = 0
mesh = SubResource("CapsuleMesh_ucva2")

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.706454, 0)

[node name="AimTarget" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.951523, 0)

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_iof21")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
custom_minimum_size = Vector2(300, 60)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -62.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_u00sh")
theme_override_font_sizes/font_size = 48
step = 10.0
value = 100.0

[node name="DamageFlash" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 0.5)
metadata/_edit_lock_ = true

[node name="DeathMessage" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0.400277, 0.0919136, 0, 0.842)
theme_override_colors/font_outline_color = Color(0.330644, 0.0200906, 0.0783636, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("3_u00sh")
theme_override_font_sizes/font_size = 128
text = "YOU DIED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 202.0
offset_bottom = 1398.0

[node name="Label1" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_u00sh")
theme_override_font_sizes/font_size = 64
text = "shots"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label2" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_u00sh")
theme_override_font_sizes/font_size = 96
text = "0"
horizontal_alignment = 1
